[gd_scene load_steps=5 format=3 uid="uid://c5cy3gxynppqd"]

[ext_resource type="Script" uid="uid://kax5bkpm4cvd" path="res://Battle/enemy_holder.gd" id="2_cv3xi"]

[sub_resource type="Animation" id="Animation_ka6bm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0nek2"]
resource_name = "TargetHighlight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.215686)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rbqb5"]
_data = {
&"RESET": SubResource("Animation_ka6bm"),
&"TargetHighlight": SubResource("Animation_0nek2")
}

[node name="EnemyHolder" type="TextureButton" groups=["battle_screen_enemies"]]
script = ExtResource("2_cv3xi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rbqb5")
}

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
